[package]
name = "my_server"
version = "0.1.0"
edition = "2024"

[dependencies]
active-win-pos-rs = "0.9.1"
aho-corasick = "1.1.4"
anyhow = "1.0.101"
bytemuck = "1.25.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-english = "0.1.8"
crossbeam-channel = "0.5.15"
fastembed = "5.8.1"
hex = "0.4.3"

image = { version = "0.25", default-features = false, features = ["png"] }

img_hash = "3.2.0"
inquire = "0.9.3"
once_cell = "1.21.3"
r2d2 = "0.8.10"
r2d2_sqlite = "0.32.0"
regex = "1.12.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
zip = "0.6"
rusqlite = { version = "0.38.0", features = ["bundled", "modern_sqlite"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
sqlite-vec = "0.1.6"
sysinfo = "0.38.0"
tokio = { version = "1.49.0", features = ["full"] }
windows = { version = "0.62.2", features = ["Media_Ocr", "Graphics_Imaging", "Storage_Streams", "Foundation"] }
xcap = "0.8.1"
zerocopy = { version = "0.8.39", features = ["derive"] }
